Fixed an issue where some shadows were being inherited and causing default events to be hard to read

--- a/Resources/public/css/Calendar.css
+++ b/Resources/public/css/Calendar.css
@@ -231,7 +231,7 @@
 }
 
 .calendar-message-box, .calendar-message-box-defaultcolor {
-
+    text-shadow: 0 0px 0 rgba(0,0,0,1.0);
 }
 
 .calendar-message-box-defaultcolor {
